--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -4,173 +4,266 @@ html:after {
   display: none;
 }
 
-/*
- * Breakpoints
- */
-/* line 30, ../sass/_bridge.scss */
-head {
-  font-family: '"xxxx-small" "xxx-small" "xx-small" "x-small" "small" "medium" "large" "x-large" "xx-large"';
+/* line 1, ../sass/_test.scss */
+html {
+  height: 100%;
 }
 
+/* line 6, ../sass/_test.scss */
+body {
+  font-family: Helvetica, sans-serif;
+  font-style: bold;
+  color: #333333;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
 @media (max-width: 400px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "xxxx-small";
+    content: "xxxx-small-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-xxxx-small {
+  body .js-breakpoints-xxxx-small-body {
     position: absolute;
   }
 }
 @media (min-width: 401px) and (max-width: 500px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "xxx-small";
+    content: "xxx-small-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-xxx-small {
+  body .js-breakpoints-xxx-small-body {
     position: absolute;
   }
 }
 @media (min-width: 501px) and (max-width: 600px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "xx-small";
+    content: "xx-small-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-xx-small {
+  body .js-breakpoints-xx-small-body {
     position: absolute;
   }
 }
 @media (min-width: 601px) and (max-width: 700px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "x-small";
+    content: "x-small-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-x-small {
+  body .js-breakpoints-x-small-body {
     position: absolute;
   }
 }
 @media (min-width: 701px) and (max-width: 800px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "small";
+    content: "small-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-small {
+  body .js-breakpoints-small-body {
     position: absolute;
   }
 }
 @media (min-width: 801px) and (max-width: 1100px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "medium";
+    content: "medium-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-medium {
+  body .js-breakpoints-medium-body {
     position: absolute;
   }
 }
 @media (min-width: 1101px) and (max-width: 1400px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "large";
+    content: "large-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-large {
+  body .js-breakpoints-large-body {
     position: absolute;
   }
 }
 @media (min-width: 1401px) and (max-width: 1800px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "x-large";
+    content: "x-large-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-x-large {
+  body .js-breakpoints-x-large-body {
     position: absolute;
   }
 }
 @media (min-width: 1801px) and (max-width: 99999px) {
   /* line 9, ../sass/_js-breakpoints.scss */
   body:after {
-    content: "xx-large";
+    content: "xx-large-body";
     display: none;
   }
   /* line 15, ../sass/_js-breakpoints.scss */
-  body .js-breakpoints-xx-large {
+  body .js-breakpoints-xx-large-body {
     position: absolute;
   }
 }
+/* line 5, ../sass/_test-mixins.scss */
+body.xxxx-small-body {
+  background-color: #b0622a;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.xxx-small-body {
+  background-color: #f94415;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.xx-small-body {
+  background-color: #19470e;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.x-small-body {
+  background-color: #034a29;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.small-body {
+  background-color: #826b93;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.medium-body {
+  background-color: #c683ce;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.large-body {
+  background-color: #ad8899;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.x-large-body {
+  background-color: #d8961a;
+}
+/* line 5, ../sass/_test-mixins.scss */
+body.xx-large-body {
+  background-color: #0e6916;
+}
 
-/* line 51, ../sass/_bridge.scss */
+/* line 31, ../sass/_test.scss */
+section.articles {
+  width: 50%;
+  margin: 0 25%;
+  height: 100%;
+}
+@media (max-width: 800px) {
+  /* line 9, ../sass/_js-breakpoints.scss */
+  section.articles:after {
+    content: "x-small-article";
+    display: none;
+  }
+  /* line 15, ../sass/_js-breakpoints.scss */
+  section.articles .js-breakpoints-x-small-article {
+    position: absolute;
+  }
+}
+@media (min-width: 801px) and (max-width: 1000px) {
+  /* line 9, ../sass/_js-breakpoints.scss */
+  section.articles:after {
+    content: "small-article";
+    display: none;
+  }
+  /* line 15, ../sass/_js-breakpoints.scss */
+  section.articles .js-breakpoints-small-article {
+    position: absolute;
+  }
+}
+@media (min-width: 1001px) and (max-width: 1200px) {
+  /* line 9, ../sass/_js-breakpoints.scss */
+  section.articles:after {
+    content: "medium-article";
+    display: none;
+  }
+  /* line 15, ../sass/_js-breakpoints.scss */
+  section.articles .js-breakpoints-medium-article {
+    position: absolute;
+  }
+}
+@media (min-width: 1201px) and (max-width: 1400px) {
+  /* line 9, ../sass/_js-breakpoints.scss */
+  section.articles:after {
+    content: "large-article";
+    display: none;
+  }
+  /* line 15, ../sass/_js-breakpoints.scss */
+  section.articles .js-breakpoints-large-article {
+    position: absolute;
+  }
+}
+@media (min-width: 1401px) and (max-width: 1800px) {
+  /* line 9, ../sass/_js-breakpoints.scss */
+  section.articles:after {
+    content: "x-large-article";
+    display: none;
+  }
+  /* line 15, ../sass/_js-breakpoints.scss */
+  section.articles .js-breakpoints-x-large-article {
+    position: absolute;
+  }
+}
+@media (min-width: 1801px) and (max-width: 99999px) {
+  /* line 9, ../sass/_js-breakpoints.scss */
+  section.articles:after {
+    content: "xx-large-article";
+    display: none;
+  }
+  /* line 15, ../sass/_js-breakpoints.scss */
+  section.articles .js-breakpoints-xx-large-article {
+    position: absolute;
+  }
+}
+/* line 5, ../sass/_test-mixins.scss */
+section.articles.x-small-article {
+  background-color: #88bd15;
+}
+/* line 5, ../sass/_test-mixins.scss */
+section.articles.small-article {
+  background-color: #c846d1;
+}
+/* line 5, ../sass/_test-mixins.scss */
+section.articles.medium-article {
+  background-color: #aabe56;
+}
+/* line 5, ../sass/_test-mixins.scss */
+section.articles.large-article {
+  background-color: #87d32a;
+}
+/* line 5, ../sass/_test-mixins.scss */
+section.articles.x-large-article {
+  background-color: #cd1146;
+}
+/* line 5, ../sass/_test-mixins.scss */
+section.articles.xx-large-article {
+  background-color: #63dfa7;
+}
+
+/* line 50, ../sass/_test.scss */
+.debug {
+  position: absolute;
+  background: lightgrey;
+  padding: 10px;
+}
+
+/* line 1, ../sass/_bridge-init.scss */
+head {
+  font-family: '"body" "|" "xxxx-small-body" "xxx-small-body" "xx-small-body" "x-small-body" "small-body" "medium-body" "large-body" "x-large-body" "xx-large-body" "||" "body .articles" "|" "x-small-article" "small-article" "medium-article" "large-article" "x-large-article" "xx-large-article"';
+}
+
+/* line 5, ../sass/_bridge-debug.scss */
 body:after {
   display: none;
-}
-
-/* line 56, ../sass/_bridge.scss */
-body:after {
-  display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #000;
-  background-color: rgba(0, 0, 0, 0.8);
-  text-align: center;
-  color: #FFF;
-  padding: 10px;
-  z-index: 1000;
-  font-size: 12px;
-  font-family: sans-serif;
-}
-
-/* line 8, ../sass/_test.scss */
-body.breakpoint- {
-  background-color: #7c50be;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-xxxx-small {
-  background-color: #fdaf6c;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-xxx-small {
-  background-color: #5791ac;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-xx-small {
-  background-color: #0c7e83;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-x-small {
-  background-color: #b1eeee;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-small {
-  background-color: #4ece4d;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-medium {
-  background-color: #df8633;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-large {
-  background-color: #a61992;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-x-large {
-  background-color: #54d251;
-}
-/* line 8, ../sass/_test.scss */
-body.breakpoint-xx-large {
-  background-color: #fec786;
 }
