--- a/demo/sass/_bridge.scss
+++ b/demo/sass/_bridge.scss
@@ -1,71 +1,42 @@
-/*
- * Breakpoints
- */
+$breakpoint-list-map: null;
 
-$breakpoint-list:
-  "xxxx-small"   400px,
-   "xxx-small"   500px,
-    "xx-small"   600px,
-     "x-small"   700px,
-       "small"   800px,
-      "medium"   1100px,
-       "large"   1400px,
-     "x-large"   1800px,
-    "xx-large"   99999px
-;
+@mixin breakpoint-bridge( $breakpoint-list, $breakpoint-selector ) {
 
-$breakpoint-list-keys: null;
-$breakpoint-list-vals: null;
-
-@each $breakpoint in $breakpoint-list {
-  $breakpoint-list-keys: append($breakpoint-list-keys, nth($breakpoint, 1));
-  $breakpoint-list-vals: append($breakpoint-list-vals, nth($breakpoint, 2));
-}
-
-// @debug $breakpoint-list-keys;
-// @debug $breakpoint-list-vals;
-
-$slicer-breakpoints: $breakpoint-list-vals;
-
-head {
-  font-family: "#{$breakpoint-list-keys}";
-}
-
-// config
-$debug: true;
-
-body {
+  $breakpoint-list-keys: null;
+  $previous-breakpoint: null;
 
   @each $breakpoint in $breakpoint-list {
 
     // Index is 1 based.
-    $i: index($breakpoint-list, $breakpoint);
+    $idx: index($breakpoint-list, $breakpoint);
+    $key: nth($breakpoint, 1);
+    $max: nth($breakpoint, 2);
 
-    @include at($i) {
-      @include defineBreakpoint(nth($breakpoint, 1));
+    // @debug $idx;
+    // @debug $key;
+    // @debug $max;
+
+    @if $previous-breakpoint != null {
+      @media ( min-width: $previous-breakpoint + 1 ) and ( max-width: $max ) {
+        @include defineBreakpoint($key);
+      }
+    } @else {
+      @media ( max-width: $max ) {
+        @include defineBreakpoint($key);
+      }
     }
-  }
-}
 
-// debug styles to see breakpoint info
-body:after {
-  display: none;
-}
+    $previous-breakpoint: $max;
 
-@if $debug == true {
-  body:after {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #000;
-    background-color: rgba(0,0,0,0.8);
-    text-align: center;
-    color: #FFF;
-    padding: 10px;
-    z-index: 1000;
-    font-size: 12px;
-    font-family: sans-serif;
+    // @debug '---';
+
+    $breakpoint-list-keys: append($breakpoint-list-keys, nth($breakpoint, 1));
   }
+
+  @if $breakpoint-list-map != null {
+    $breakpoint-list-map: append($breakpoint-list-map, '||');
+  }
+
+  $breakpoint-list-map: append($breakpoint-list-map, $breakpoint-selector '|' $breakpoint-list-keys);
+
 }
