--- a/demo/sass/main.scss
+++ b/demo/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'compass';
-@import 'breakpoint';
-@import 'breakpoint-slicer';
 @import 'js-breakpoints';
 @import 'bridge';
+@import 'test-mixins';
 @import 'test';
+@import 'bridge-init';
+@import 'bridge-debug';
