--- a/demo/source/sass/_demo-styles.scss
+++ b/demo/source/sass/_demo-styles.scss
@@ -87,15 +87,15 @@ body {
   background-position: center center;
 
   &.small-aside {
-    background-image: url('http://dummyimage.com/350x700/828282/fff.jpg&text=Small+FPO+Image');
+    background-image: url('http://dummyimage.com/350x700/828282/fff.jpg&text=Small+Image');
   }
 
   &.medium-aside {
-    background-image: url('http://dummyimage.com/500x500/828282/fff.jpg&text=Medium+FPO+Image');
+    background-image: url('http://dummyimage.com/500x500/828282/fff.jpg&text=Medium+Image');
   }
 
   &.large-aside {
-    background-image: url('http://dummyimage.com/900x350/828282/fff.jpg&text=Large+FPO+Image');
+    background-image: url('http://dummyimage.com/900x350/828282/fff.jpg&text=Large+Image');
   }
 }
 
