Improved demo for responsive CSS image background.

--- a/demo/source/sass/demo.scss
+++ b/demo/source/sass/demo.scss
@@ -1,4 +1,5 @@
 @import 'js-breakpoints/breakpoints';
 @import 'breakpoint-bridge';
 @import 'demo-styles';
+@import 'demo-background-images';
 @import 'breakpoint-bridge-init';
