--- a/demo/source/sass/demo.scss
+++ b/demo/source/sass/demo.scss
@@ -1,5 +1,8 @@
 @import 'js-breakpoints/breakpoints';
 @import 'breakpoint-bridge';
 @import 'demo-styles';
+@import 'demo-background-colors';
 @import 'demo-background-images';
+@import 'demo-inline-images';
+@import 'demo-process-state';
 @import 'breakpoint-bridge-init';
