--- a/demo/source/sass/_demo-background-colors.scss
+++ b/demo/source/sass/_demo-background-colors.scss
@@ -1,36 +1,29 @@
-@mixin set-background-images( $breakpoint-list ) {
+@mixin set-background-colors( $breakpoint-list ) {
 
   @each $breakpoint in $breakpoint-list {
 
-    $key: nth($breakpoint, 1);
+    &.#{nth($breakpoint, 1)} {
 
-    &.#{$key} {
-
-      background-image: url('/img/#{$key}.jpg');
+      background-color: rgb(random(255), random(255), random(255));
     }
   }
 }
 
-.aside {
-  box-sizing: border-box;
-  position: absolute;
-  top: 10%;
-  bottom: 50%;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  width: 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+body {
 
   $breakpoint-list:
-       "aside-small"   700px,
-      "aside-medium"   1400px,
-       "aside-large"   1800px,
-    "aside-infinite"   99999px
+    "body-xxxx-small"   400px,    //    0px   <--    400px
+     "body-xxx-small"   500px,    //  401px   <-->   500px
+      "body-xx-small"   600px,    //  501px   <-->   600px
+       "body-x-small"   700px,    //  601px   <-->   700px
+         "body-small"   800px,    //  701px   <-->   800px
+        "body-medium"   1100px,   //  801px   <-->   1100px
+         "body-large"   1400px,   // 1101px   <-->   1400px
+       "body-x-large"   1600px,   // 1401px   <-->   1600px
+      "body-infinite"   99999px   // 1601px    -->   99999px
   ;
 
-  @include breakpoint-bridge( $breakpoint-list, 'aside' );
+  @include breakpoint-bridge( $breakpoint-list, 'body' );
 
-  @include set-background-images( $breakpoint-list );
+  @include set-background-colors( $breakpoint-list );
 }
