--- a/demo/source/sass/demo.scss
+++ b/demo/source/sass/demo.scss
@@ -1,8 +1,7 @@
 @import 'js-breakpoints/breakpoints';
 @import 'breakpoint-bridge';
 @import 'demo-styles';
-@import 'demo-background-colors';
-@import 'demo-background-images';
-@import 'demo-inline-images';
+@import 'demo-background-image';
+@import 'demo-inline-image';
 @import 'demo-process-state';
 @import 'breakpoint-bridge-init';
