--- a/demo/source/sass/_demo-styles.scss
+++ b/demo/source/sass/_demo-styles.scss
@@ -8,24 +8,22 @@ body {
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   color: #333333;
+  background: #e6e6e6;
   padding: 0;
   margin: 0;
   height: 100%;
 }
 
-.header {
+.process-state {
 
   box-sizing: border-box;
   position: absolute;
-  top: 5%;
-  bottom: 80%;
-  margin-top: 2.5%;
-  margin-bottom: 2.5%;
   width: 100%;
-  height: 10%;
+  height: 20%;
+  background: #333333;
 }
 
-.aside {
+.background-image {
 
   box-sizing: border-box;
   position: absolute;
@@ -36,7 +34,7 @@ body {
   width: 50%;
 }
 
-.article {
+.inline-image {
 
   box-sizing: border-box;
   position: absolute;
