--- a/demo/source/sass/_demo-styles.scss
+++ b/demo/source/sass/_demo-styles.scss
@@ -14,36 +14,37 @@ body {
   height: 100%;
 }
 
+$header-height: 15%;
+
 .process-state {
 
   box-sizing: border-box;
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: $header-height;
   background: #333333;
+  overflow: hidden;
 }
 
 .background-image {
 
   box-sizing: border-box;
   position: absolute;
-  top: 10%;
+  top: $header-height;
   bottom: 50%;
-  margin-top: 5%;
-  margin-bottom: 5%;
   width: 50%;
+  overflow: hidden;
 }
 
 .inline-image {
 
   box-sizing: border-box;
   position: absolute;
-  top: 10%;
+  top: $header-height;
   bottom: 0;
-  margin-top: 5%;
-  margin-bottom: 5%;
   width: 50%;
   margin-left: 50%;
+  overflow: hidden;
 }
 
 .debug {
