Fixed image path issue.

--- a/demo/source/sass/_demo-background-image.scss
+++ b/demo/source/sass/_demo-background-image.scss
@@ -6,7 +6,7 @@
 
     &.#{$key} {
 
-      background-image: url('/img/#{$key}.jpg');
+      background-image: url('../img/#{$key}.jpg');
     }
   }
 }
