--- a/demo/source/sass/_demo-background-image.scss
+++ b/demo/source/sass/_demo-background-image.scss
@@ -1,4 +1,4 @@
-@mixin set-background-images( $breakpoint-list ) {
+@mixin set-background-images( $breakpoint-list, $id ) {
 
   @each $breakpoint in $breakpoint-list {
 
@@ -6,27 +6,22 @@
 
     &.#{$key} {
 
-      background-image: url('../img/#{$key}.jpg');
+      background-image: url('../img/#{$id}/#{$key}.jpg');
     }
   }
 }
 
 .background-image {
 
-  box-shadow: inset 0px 0px 25px 1px rgba(0, 0, 0, 0.25);
-
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-
   $breakpoint-list:
-       "background-image-small"      700px,
-       "background-image-medium"     1400px,
-       "background-image-large"      1800px,
-       "background-image-infinite"   99999px
+   "small"      700px,
+   "medium"     1400px,
+   "large"      1800px
   ;
 
-  @include breakpoint-bridge( $breakpoint-list, 'background-image' );
+  $id: 'background-image';
 
-  @include set-background-images( $breakpoint-list );
+  @include breakpoint-bridge( $breakpoint-list, $id );
+
+  @include set-background-images( $breakpoint-list, $id );
 }
