--- a/demo/source/sass/_demo-inline-image.scss
+++ b/demo/source/sass/_demo-inline-image.scss
@@ -1,15 +1,9 @@
 .inline-image {
 
-  img {
-    width: 100%;
-    height: auto;
-  }
-
   $breakpoint-list:
-       "inline-image-small"       800px,
-       "inline-image-medium"      1100px,
-       "inline-image-large"       1500px,
-       "inline-image-infinite"    99999px
+   "small"       800px,
+   "medium"      1100px,
+   "large"       1500px
   ;
 
   @include breakpoint-bridge( $breakpoint-list, 'inline-image' );
