--- a/demo/source/sass/_demo-process-state.scss
+++ b/demo/source/sass/_demo-process-state.scss
@@ -1,21 +1,7 @@
 .process-state {
 
-  $size: 10px;
-
-  .process {
-    width: $size;
-    height: $size;
-    background: #828282;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 100;
-    box-shadow: 0px 0px 5px 2.5px rgba(132, 132, 132, 1);
-  }
-
   $breakpoint-list:
-     "process-state-disable"   500px,
-     "process-state-enable"    99999px
+    "disable"   500px,
   ;
 
   @include breakpoint-bridge( $breakpoint-list, 'process-state' );
