--- a/demo/source/sass/_demo-styles.scss
+++ b/demo/source/sass/_demo-styles.scss
@@ -24,6 +24,19 @@ $header-height: 15%;
   height: $header-height;
   background: #333333;
   overflow: hidden;
+
+  $size: 10px;
+
+  .process {
+    width: $size;
+    height: $size;
+    background: #828282;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 100;
+    box-shadow: 0px 0px 5px 2.5px rgba(132, 132, 132, 1);
+  }
 }
 
 .background-image {
@@ -34,6 +47,10 @@ $header-height: 15%;
   bottom: 50%;
   width: 50%;
   overflow: hidden;
+  box-shadow: inset 0px 0px 25px 1px rgba(0, 0, 0, 0.25);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .inline-image {
@@ -45,6 +62,11 @@ $header-height: 15%;
   width: 50%;
   margin-left: 50%;
   overflow: hidden;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .debug {
